--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "location-bar": "^2.0.0",
     "mocha": "^2.2.4",
     "phantomjs-prebuilt": "^2.1.7",
+    "prop-types": "^15.6.0",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
     "react-dom": "^0.14.0",
